scribble-test/src/test/resources/good/syntax/projroledeclfix/Test01.scr
//$ bin/scribblec.sh scribble-test/src/test/resources/good/syntax/projroledeclfix/Test01.scr -project Bar F


module good.syntax.projroledeclfix.Test01;


// Test unused roledecl filtering in projections
global protocol Foo(role A, role B, role C)
{
	1() from A to B;
	do Bar(A, B, C);
}

global protocol Bar(role D, role E, role F)
{
	2() from D to F;
	do Foo(D, E, F);
}

