scribble-test/src/test/resources/bad/syntax/disamb/nonrolearglist/NonRoleArgList02.scr
module bad.syntax.disamb.rolearglist.NonRoleArgList02;


global protocol Foo(role A, role B)
{
	do Bar<1()>(A, B);
}

global protocol Bar<type T>(role C, role D)
{
	2(T) from C to D;
}
